<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="action_settings">Settings</string>
	<string name="app_name">Jumping Crab</string>
	<string name="hello_world">Hello world!</string>
	<string name="helpButton">Help</string>
	<string name="startButton">Game Start</string>
	<string name="pref_enemy_count_text">Max Enemy Count</string>
	<string name="pref_enemy_speed_text">Enemy Speed</string>
	<string name="pref_enemy_title">Enemy Preference</string>
	<string name="pref_jump_height_title">Jump Height</string>
	<string name="pref_player_title">Player Preference</string>
	<string name="prefButton">Preference</string>
	<string name="result_button_exit">Back To Menu</string>
	<string name="result_button_retry">Retry</string>
	<string name="result_text_goal">Goal</string>
	<string name="result_text_miss">Miss</string>
	<string name="game_to_clear">game to clear:</string>
	<string name="second">second</string>
	<string name="help_faq_title1">Q. Absolutely the game can not be cleared.\n</string>
	<string name="help_faq_answer1">A. Please change the number of the enemy.\n</string>
	<string name="help_faq_title2">Q. Game is not interesting too easy.\n</string>
	<string name="help_faq_answer2">A. Please change the settings of your enemy and character.\n</string>
	<string name="help_faq_title3">Q. I want to change the height of the jump.\n</string>
	<string name="help_faq_answer3">A. You can be changed from the settings screen.\n</string>
	<string name="help_faq_title4">Q. I want to change the number of enemy characters.\n</string>
	<string name="help_faq_answer4">A. You can be changed from the settings screen.\n</string>
	<string name="help_faq_title5">Q. I want to change the operating speed of the enemy character.\n</string>
	<string name="help_faq_answer5">A. You can be changed from the settings screen.\n</string>
	<string name="help_license">clipart by illpopp.com\n</string>

</resources>