<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mainTitle" />

	<Button
		android:id="@+id/startButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/startButton" />

	<Button
		android:id="@+id/helpButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/helpButton" />

	<Button
		android:id="@+id/prefButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/prefButton" />

</LinearLayout>